--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -25,7 +25,7 @@ jobs:
         run: npm install
 
       - name: Build Assets
-        run: npm run dev
+        run: npm run build
 
       - name: Copy .env
         run: php -r "file_exists('.env') || copy('.env.example', '.env');"
